--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy .env
-        run: cp ~/einkbackend.env .env
+        run: cp ~/trmnl.env .env
 
       - name: Pull and restart
         run: |
           docker compose pull
-          docker compose up -d
+          docker compose up -d --remove-orphans
