Add configuration values and custom fields for family dashboard
- Updated .gitignore to exclude 'einkdemo' directory.
- Modified compose.yml to include new Puppeteer environment variables.
- Added configuration values documentation for the family dashboard.
- Introduced custom fields for family member details in YAML format.
- Created a new Blade template for the family morning dashboard layout.

--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,8 @@ services:
       FORCE_HTTPS: 1
       TRUSTED_PROXIES: "*"
       REGISTRATION_ENABLED: 0
+      PUPPETEER_DOCKER: true
+      PUPPETEER_WINDOW_SIZE_STRATEGY: v2
       DB_DATABASE: database/storage/database.sqlite
     volumes:
       - database:/var/www/html/database/storage
